# fill-pdf

./: .gitignore  ASPECT_RATIO_IMPLEMENTATION.md  CACHING.md  Cargo.toml  IMPLEMENTATION.md  METADATA_FEATURE.md  README.md  TEMPLATE_SOURCES.md  URL_SUPPORT.md  extract_font_info.py  extract_text_fonts.py  merge_pdfs.ts  package.json  test-cutoff.json
docs/: CACHE_IMPLEMENTATION.md  DEPENDENCIES.md  FEATURES.md  FLATTENING.md  PLATFORM_COMPATIBILITY.md  example_complete.json  example_fields.json  example_metadata.json  example_template_url.json  example_with_urls.json  pdf-to-image.md  test_aspect_ratio.json
samples/: test-cutoff-debug.json  test-data-bun.json
src/: cache.rs  fetcher.rs  main.rs  merge.rs  merge.rs.backup  merge_bun.rs  renderer.rs  types.rs
