[package]
name = "fill-pdf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fill-pdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lopdf = "0.36.0"
pdf-writer = "0.11.0"
image = "0.25.6"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
bincode = "1.3"
